[tool.poetry]
name = "opsdroid-repohook"
version = "0.1.0"
description = ""
authors = ["Leo Settele <leonhard.settele@mayflower.de>"]

[tool.poetry.dependencies]
python = "^3.9"
Markdown = "^3.3.4"
matrix-nio = "^0.18.7"

[tool.poetry.dev-dependencies]
opsdroid = "^0.23.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
